[ADDED] fix lr mirror
Former-commit-id: ef4c28438d8d17a2f30978f083518ac8c85d8084

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -638,6 +638,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\FixLRMirror.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixLRMirror.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\FixLRP3dLayer.cpp"
 					>
 				</File>
