[ADDED] fix add color
Former-commit-id: 87d61156d62ca3d66d2b2bbbf1288deeed4c442d

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -630,6 +630,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\FixAddColor.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixAddColor.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\FixJsonBase.cpp"
 					>
 				</File>
