[ADDED] filename property
Former-commit-id: 516a996198abb668e5294cd8697aa6ecba34c2de

--- a/easyeditor/platform/msvc2008/projects/libgui.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libgui.vcproj
@@ -294,6 +294,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\gui\FileNameProperty.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\FileNameProperty.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\gui\FilepathProperty.cpp"
 				>
 			</File>
