[ADDED] fix lr layer
Former-commit-id: b6a3e82f6db858f2c58730cf1183f3c86734966f

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -670,14 +670,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\easydb_cl\FixLRSprName.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easydb_cl\FixLRSprName.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\easydb_cl\FixMirror.cpp"
 					>
 				</File>
@@ -938,6 +930,26 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="fix"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\FixLRSprLayer.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\FixLRSprLayer.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\FixLRSprName.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\FixLRSprName.h"
 						>
 					</File>
 				</Filter>
