--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -525,6 +525,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\shaderlab\utility\Statistics.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\shaderlab\utility\Statistics.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\shaderlab\utility\typedef.h"
 				>
 			</File>
