[CHANGED] rigging skin use index
Former-commit-id: 895f93514670dc468efefd156bc69605838d4415

--- a/rigging/platform/msvc2008/projects/rigging.vcproj
+++ b/rigging/platform/msvc2008/projects/rigging.vcproj
@@ -197,6 +197,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\source\rg_skin.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\rigging\rg_skin.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\rg_utility.c"
 			>
 		</File>
