[FIXED] use mt for world pose
Former-commit-id: d140b265f46ddc4bc8203c7b22dd8f6cab517898

--- a/rigging/platform/msvc2008/projects/rigging.vcproj
+++ b/rigging/platform/msvc2008/projects/rigging.vcproj
@@ -173,11 +173,19 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\source\rg_joint_pose.c"
+			RelativePath="..\..\..\include\rigging\rg_pose_mat.c"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\include\rigging\rg_joint_pose.h"
+			RelativePath="..\..\..\include\rigging\rg_pose_mat.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\source\rg_pose_srt.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\rigging\rg_pose_srt.h"
 			>
 		</File>
 		<File
