[ADDED] rg slot
Former-commit-id: 71c5208d4d1217ff8c87d2b5306186e43ef4a029

--- a/rigging/platform/msvc2008/projects/rigging.vcproj
+++ b/rigging/platform/msvc2008/projects/rigging.vcproj
@@ -213,6 +213,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\include\rigging\rg_slot.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\rg_utility.c"
 			>
 		</File>
