[ADDED] rg_skeleton_skin
Former-commit-id: b3d73122d8615f559bf148d2ac727e56513d98b8

--- a/rigging/platform/msvc2008/projects/rigging.vcproj
+++ b/rigging/platform/msvc2008/projects/rigging.vcproj
@@ -205,6 +205,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\source\rg_skeleton_skin.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\rigging\rg_skeleton_skin.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\rg_skin.c"
 			>
 		</File>
