--- a/easyeditor/platform/msvc2008/projects/libtool.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libtool.vcproj
@@ -263,6 +263,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\source\tool\LogMgr.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\ee\LogMgr.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\tool\PlayControl.cpp"
 			>
 		</File>
