[ADDED] lerp spiral
Former-commit-id: 8534c9cfe516401b4440a518b173ed75cf668281

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -447,6 +447,14 @@
 					Name="keyframes"
 					>
 					<File
+						RelativePath="..\..\..\src\easyanimation\view\FrameLerpDialog.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easyanimation\view\FrameLerpDialog.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easyanimation\view\KeysContentEdit.cpp"
 						>
 					</File>
