[ADDED] pack for multi pkg
Former-commit-id: 68c4fe9c873319bfcef0c7551c0f18202551b230

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -493,6 +493,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libsprpacker\PackIDMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackIDMgr.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libsprpacker\PackNodeFactory.cpp"
 				>
 			</File>
