[FIXED] pack for empty filepath
Former-commit-id: 76fb15b39ae9469a29eba173fd60d1d67c6141a7

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -436,6 +436,10 @@
 				RelativePath="..\..\..\src\libsprpacker\to_int.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\typedef.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="builder"
