[ADDED] anim2 static time
Former-commit-id: 5fc500fd8139670f4bab1530ba5acafe9c8c1608

--- a/easyanim2/platform/msvc2008/projects/libanim2.vcproj
+++ b/easyanim2/platform/msvc2008/projects/libanim2.vcproj
@@ -200,6 +200,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="property"
+				>
+				<File
+					RelativePath="..\..\..\src\libanim2\PropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libanim2\PropertySetting.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="dataset"
