--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\shaderlab;..\..\..\..\ejoy2d\src;..\..\..\..\ds\src\ds;..\..\..\..\cu\src\cu;..\..\..\..\sm\src\sm;..\..\..\..\editor-external\c99"
+				AdditionalIncludeDirectories="..\..\..\src\shaderlab;..\..\..\..\ds\src\ds;..\..\..\..\unirender\include;..\..\..\..\cu\src\cu;..\..\..\..\sm\src\sm;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\shaderlab;..\..\..\..\ejoy2d\src;..\..\..\..\ds\src\ds;..\..\..\..\cu\src\cu;..\..\..\..\sm\src\sm;..\..\..\..\editor-external\c99"
+				AdditionalIncludeDirectories="..\..\..\src\shaderlab;..\..\..\..\ds\src\ds;..\..\..\..\unirender\include;..\..\..\..\cu\src\cu;..\..\..\..\sm\src\sm;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -549,10 +549,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\shaderlab\render\RenderConst.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\shaderlab\render\RenderLayout.cpp"
 				>
 			</File>
@@ -566,10 +562,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\shaderlab\render\RenderShader.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\shaderlab\render\VertexAttrib.h"
 				>
 			</File>
 		</Filter>
