--- a/easytrail/platform/msvc2008/projects/libtrail.vcproj
+++ b/easytrail/platform/msvc2008/projects/libtrail.vcproj
@@ -243,6 +243,14 @@
 					RelativePath="..\..\..\src\libtrail\PropertySettingPanel.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\libtrail\SprPropSetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libtrail\SprPropSetting.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
